# Glimpse

./: .gitignore  package-lock.json
.github/workflows/: deploy-pages.yml
glimpse/: README.md  index.html  package-lock.json  package.json  vite.config.ts
glimpse/.claude/skills/verify/: SKILL.md
glimpse/public/: glimpse-bridge.js
glimpse/src/: App.tsx  gifenc.d.ts  main.tsx
glimpse/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
glimpse/src-tauri/capabilities/: default.json
glimpse/src-tauri/sidecar/: glimpse-capture.swift
glimpse/src-tauri/src/: capture.rs  lib.rs  main.rs
glimpse/src/capture/: appWindow.ts  displayCapture.ts  nativeCapture.ts  pointerTracker.ts  recorder.ts
glimpse/src/export/: exporter.ts
glimpse/src/render/: renderer.ts
glimpse/src/state/: projectFile.ts  store.ts
glimpse/src/styles/: global.css
glimpse/src/timeline/: autoZoom.ts  easing.ts  model.ts  sampler.ts
glimpse/src/ui/: Editor.tsx  FrameView.tsx  Icon.tsx  Inspector.tsx  PoseGizmo.tsx  Preview.tsx  RecordingBar.tsx  ThemeToggle.tsx  Timeline.tsx  Welcome.tsx
