[package]
name = "glimpse"
version = "0.1.0"
description = "Glimpse — screen recordings with post-record cursor, zoom and 3D hero shots"
edition = "2021"

[lib]
name = "glimpse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
